--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
+.git
+.DS_Store
+.idea
+.vscode
+/node_modules
+.env
+.env.*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.setadminpw
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 *.bak
-build/*
+/build
+/dist
